# find_some_work_bot

./: .gitignore  .repoignore  README.md  backup.py  config.py  main.py  openai_filter.py  pyproject.toml  pytest.ini  restore.py  telegram_handlers.py  telethon_polling.py  variables.py
tests/: test_openai_filter.py  test_polling.py  test_telegram_handlers.py  test_variables.py
